--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "material-palette-generator",
   "version": "1.0.0",
-  "description": "Original material design palette generator",
-  "main": "dist/palette-generator.js",
+  "description": "Material design palette generator",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/eugeneford/material-palette-generator.git"
@@ -22,7 +22,7 @@
     "palette",
     "generator"
   ],
-  "author": "Eugene Ford",
+  "author": "Amir Asghary",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
