--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/eugeneford/material-palette-generator.git"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "rollup -c --environment NODE_ENV:production",
     "build-watch": "webpack --mode development --watch",
     "test": "karma start --single-run",
     "test-watch": "karma start",
@@ -25,12 +25,14 @@
   "author": "Amir Asghary",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.2",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "babel-loader": "^8.2.5",
     "copy-text-to-clipboard": "^2.2.0",
     "coveralls": "^3.1.0",
     "enzyme": "^3.11.0",
@@ -52,8 +54,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-test-renderer": "^16.13.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "rollup-plugin-uglify": "^6.0.4"
   }
 }
