--- a/package.json
+++ b/package.json
@@ -9,13 +9,7 @@
   },
   "scripts": {
     "build": "rollup -c --environment NODE_ENV:production",
-    "build-watch": "webpack --mode development --watch",
-    "test": "karma start --single-run",
-    "test-watch": "karma start",
-    "lint": "eslint src/*.js src/*.jsx",
-    "demo-build": "webpack --config webpack.demo.config.js",
-    "demo-watch": "webpack --config webpack.demo.config.js --mode development --watch",
-    "demo-serve": "webpack-dev-server --config webpack.demo.config.js --mode development"
+    "lint": "eslint src/*.js src/*.jsx"
   },
   "keywords": [
     "colors",
@@ -34,8 +28,6 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
     "babel-loader": "^8.2.5",
-    "copy-text-to-clipboard": "^2.2.0",
-    "coveralls": "^3.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
     "eslint": "^4.12.1",
@@ -43,18 +35,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
-    "get-contrast": "^2.0.0",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine-core": "^2.7.0",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-webpack": "^2.0.6",
     "prop-types": "^15.6.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-test-renderer": "^16.13.1",
     "rollup-plugin-uglify": "^6.0.4",
     "typescript": "^4.7.2"
   }
