--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "build": "rollup -c --environment NODE_ENV:production",
+    "test": "jest",
     "lint": "eslint src/*.js src/*.jsx"
   },
   "keywords": [
@@ -25,20 +26,20 @@
     "@babel/core": "^7.18.2",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.18.2",
-    "@babel/preset-react": "^7.17.12",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
+    "@types/jest": "^28.1.1",
     "babel-loader": "^8.2.5",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.3",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
+    "jest": "^28.1.0",
     "prop-types": "^15.6.0",
     "rollup-plugin-uglify": "^6.0.4",
+    "ts-jest": "^28.0.4",
     "typescript": "^4.7.2"
   }
 }
