--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prop-types": "^15.6.0",
     "rollup-plugin-uglify": "^6.0.4",
     "ts-jest": "^28.0.4",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.2"
   }
 }
