--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -18,6 +18,7 @@ jobs:
         node-version: '16'
         cache: 'yarn'
     - run: yarn install
+    - run: yarn global add rollup
     - run: yarn build
   test:
     runs-on: ubuntu-latest
