--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "jest": "^28.1.0",
+    "jest-junit": "^13.2.0",
     "prop-types": "^15.6.0",
     "rollup-plugin-uglify": "^6.0.4",
     "ts-jest": "^28.0.4",
