--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -32,3 +32,9 @@ jobs:
         cache: 'yarn'
     - run: yarn install
     - run: yarn test
+    - uses: codecov/codecov-action@v3.1.0
+      with:
+        files: ./junit.xml
+        flags: unittests
+        fail_ci_if_error: true
+        verbose: true
