--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -10,32 +10,38 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-    - name: Use Node.js '16'
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
-        cache: 'yarn'
-    - run: yarn install
-    - run: yarn global add rollup
-    - run: yarn build
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - name: Use Node.js '16'
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+          cache: 'yarn'
+      - run: yarn install
+      - run: yarn global add rollup
+      - run: yarn build
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-    - name: Use Node.js '16'
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
-        cache: 'yarn'
-    - run: yarn install
-    - run: yarn test
-    - run: ls
-    - uses: codecov/codecov-action@v3.1.0
-      with:
-        files: ./junit.xml
-        flags: unittests
-        fail_ci_if_error: true
-        verbose: true
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - name: Use Node.js '16'
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+          cache: 'yarn'
+      - run: yarn install
+      - run: yarn test
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-report
+          path: |
+            ./coverage/
+            ./junit.xml
+      - uses: codecov/codecov-action@v3.1.0
+        with:
+          files: ./junit.xml
+          flags: unittests
+          fail_ci_if_error: true
+          verbose: true
